--- a/style.css
+++ b/style.css
@@ -22,37 +22,30 @@ body{
     overflow:hidden;
 }
 .navigation.active{
-    width: 60px;
+    width: 60px;   
 }
-.navigation ul{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-.navigation ul li{
-    position: relative;
-    width: 100%;
-    list-style: none;
-}
-.navigation ul li:hover{
-    background: #03a9f4;
-}
-.navigation ul li:nth-child(1){
-    margin-top: 0;
-}
-.navigation ul li:nth-child(1):hover{
+button{
     background: transparent;
-}
-.navigation ul li a{
-    text-decoration: none;
-    display: block;
-    position: relative;
+    outline: none;
+    border: none;
     width: 100%;
     display: flex;
+    align-items: center;
     color: #fff;
+    font-size: 16px;
+    cursor: pointer;
 }
-.navigation ul li .icon{
+
+.navigation button{
+    position: relative;
+    width: 100%;
+}
+.navigation .tabs__button:hover{
+    background: #001722;
+}
+
+
+.navigation .icon{
     position: relative;
     display: block;
     min-width: 60px;
@@ -60,11 +53,11 @@ body{
     line-height: 60px;
     text-align: center; 
 }
-.navigation ul li .icon .fa{
+.navigation .icon .fa{
     color: #fff;
     font-size: 24px;
 }
-.navigation ul li a .title{
+.navigation .title{
     position: relative;
     display: block;
     padding: 0 10px;
@@ -78,6 +71,7 @@ body{
     left: 300px;
     min-height: 100vh;
     background: #f5f5f5;
+    transition: 0.5s;
 }
 .main.active{
    width: calc(100% - 60px);
@@ -100,9 +94,7 @@ body{
     cursor: pointer;
 }
 
-.toggle::before{
-    content: '\f0c9';
-    font-family: fontAwesome;
+.toggle span i{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -112,21 +104,17 @@ body{
     color: #111;
 }
 
-.search{
-    position: relative;
-    width: 400px;
-    margin: 0 10px;
+[data-tab-content]{
+    display: none;
 }
 
-.search label{
-    position: relative;
-    width: 100%;
+.active[data-tab-content]{
+  display: block;
+  padding: 2em;
 }
-.search label input{
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    padding: 5px 20px;
-    outline: none;
-    border: 1px solid black;
+
+.tabs__button.active{
+    background: #001722;
+    border-right: #fff;
 }
+
