--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ body{
 .navigation.active{
     width: 60px;   
 }
+a{
+    text-decoration: none;
+    color: white;
+}
+
+td img{
+   width: 100px;
+   height: 100px;  
+   object-fit: cover;
+}
 button{
     background: transparent;
     outline: none;
@@ -70,7 +80,6 @@ button{
     width: calc(100% - 300px);
     left: 300px;
     min-height: 100vh;
-    background: #f5f5f5;
     transition: 0.5s;
 }
 .main.active{
@@ -104,6 +113,24 @@ button{
     color: #111;
 }
 
+@media screen and (max-width: 1000px) {
+    .main{
+        width: calc(100% - 60px);
+        left: 60px;
+    }
+    .navigation{
+        width: 60px;
+    }
+
+    .main.active{
+        width: calc(100% - 300px);
+        left: 300px;
+    }
+    .navigation.active{
+        width: 300px;
+    }
+}
+
 [data-tab-content]{
     display: none;
 }
@@ -118,3 +145,115 @@ button{
     border-right: #fff;
 }
 
+.content-table {
+    border-collapse: collapse;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    margin: auto;
+  }
+  
+  .content-table thead tr {
+    background-color: #003147;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+  }
+  
+  .content-table th,
+  .content-table td {
+    padding: 12px 15px;
+  }
+  
+  .content-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+  }
+  
+  .content-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+  }
+
+   i{
+      padding-right: 5px;
+      cursor: pointer;
+  }
+
+  .cars__table{
+      margin-bottom: 10em;
+  }
+
+  form{
+    margin-left: 10%;
+    width: 100%;
+    margin-bottom: 1em;
+  }
+
+  .form{
+      width: 150px;
+  }
+
+  .form input{
+      width: 100%;
+      height: 30px;
+      border: 1px solid black;
+      border-radius: 5px;
+      outline: none;
+      cursor: pointer;
+      padding: 2px;
+      caret-color: teal;
+  }
+  
+  #add{
+      outline: none;
+      background: teal;
+      color: #fff;
+      width: auto;
+      padding: 2px 5px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 17px;
+      display: flex;
+      justify-content: center;
+      margin-top: 2em;
+  }
+  
+  #previews{
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-auto-rows: 200px;
+      grid-auto-flow: dense;
+      gap: 5px;
+    }
+
+  #previews img{
+      max-width: 200px;
+      height: 100%;
+      object-fit: cover;
+  }
+input[type = 'file']{
+    display: none;
+}
+  #imagesLabel{
+    color: #fff;
+    height: 60px;
+    width: 250px;
+    background: teal;
+    margin-top: 4em;
+    margin-bottom: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.uploadImages{
+    margin-bottom: 3em;
+}
+
+.edit-form{
+    display: none;
+}
+
+.label-name{
+    font-weight: 500;
+}
